--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.1",
     "vite": "^5.2.8"
   }
 }
