--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.12.2",
     "pinia": "^2.1.7",
     "primevue": "^3.52.0",
+    "transliteration": "^2.3.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
